# veryfi-rust

./: Cargo.toml  README.md
.github/config/: grcov.yml
.github/workflows/: main.yml  master.yml  release.yml  test.yml
docs/: crates.js  search-index.js  settings.html  source-files.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/src/veryfi/: lib.rs.html
docs/src/veryfi/client/: client.rs.html  client_factory.rs.html  mod.rs.html
docs/veryfi/: all.html  index.html
docs/veryfi/client/: fn.create_client.html  fn.create_client_with_custom_api_version.html  index.html  sidebar-items.js  struct.Client.html
docs/veryfi/client/client/: struct.Client.html
docs/veryfi/client/client_factory/: fn.create_client.html  fn.create_client_with_custom_api_version.html
resources/: updateDocument.json
src/client/: client.rs  client_factory.rs  mod.rs
