[package]
name = "veryfi"
version = "1.0.0"
edition = "2021"
authors = ["Veryfi"]

[dependencies]
hmac-sha256 = "1.0.0"
base64 = "0.13.0"
utf8-decode = "1.0.1"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
serde_json = "1.0.72"

[dev-dependencies]
rand = "0.8.4"
mockito = "0.30.0"
